Fix some mobile layout problems
Closes #406

--- a/_sass/layouts/blog.scss
+++ b/_sass/layouts/blog.scss
@@ -5,6 +5,12 @@ body.post {
     h1, h2, h3, h4, h5, h6, p, small, strong, em,
     table tr th, table tr td, li, i, dt, .title, .paragraph, .footnote, b {
       color: #0D1C2C;
+      @media only screen and (max-width: 768px) {
+        word-wrap: break-word;
+      }
+    }
+    .note, .colist {
+      overflow: auto;
     }
     a {
       color: $link-light-bg;
